<resources>
    <string name="app_name">TestWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_description">descroption</string>
    <string name="day">День</string>
    <string name="three_day">3 Дня</string>
    <string name="Week">Неделя</string>
    <string name="m_s"> м/с</string>
    <string name="mil_h"> мил/ч</string>
    <string name="setting">НАСТРОЙКИ</string>
    <string name="city">City</string>
    <string name="start_description">image description</string>
    <string name="description_cloudness">Description cloudness</string>
    <string name="description_pressure">Pressure</string>
    <string name="description_wind">Description wind</string>
    <string name="description_cloudiness">Description cloudiness</string>
    <string name="not_connection">No internet connection</string>
    <string name="back_press">Нажмите еще раз для выхода!</string>
    <string name="search_hint">hint search</string>
    <string name="search">Поиск</string>
    <string name="found_city">Найденый город</string>
    <string name="select_city">Select City on Settings</string>
    <string name="city_not_found">City not found</string>

    <string name="hPa"> hPa</string>
    <string name="procent"> %</string>


    <string name="settings_default">Default</string>
    <string name="settings_city">City =</string>
    <string name="settings_latitude">Default</string>
    <string name="settings_longitude">Default</string>

</resources>